--- a/package.json
+++ b/package.json
@@ -38,14 +38,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/shubhamstr/react_demo_practice.git"
-  },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/shubhamstr/react_demo_practice/issues"
-  },
-  "homepage": "https://github.com/shubhamstr/react_demo_practice#readme"
+  "license": "ISC"
 }
